fixing best life role

--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
   const DEFAULT_ROLE = "Writing, Production, Mixing";
   const WRIT_PROD_MIS_MAS_ROLE = "Writing, Production, Mixing, Mastering";
   const EVERYTHING_ROLE = "Singing, Songwriting, Production, Mixing, Mastering";
+  const WRITE_PROD_ROLE = "Writing, Production";
 
   // ✅ Add artist names here (and optionally titles if you want to override)
   const releases = [
     { url: "https://open.spotify.com/track/0xLPuvFdAvOVpLb0DtqSdg", artist: "Ben Rodrigues", role: WRIT_PROD_MIS_MAS_ROLE },
     { url: "https://open.spotify.com/track/67KTEMcMLq0rrByxzzZku8", artist: "Ben Rodrigues", role: DEFAULT_ROLE },
     { url: "https://open.spotify.com/track/6e67jV14CqsB6b6cZKoGd6", artist: "Ben Rodrigues", role: DEFAULT_ROLE },
-    { url: "https://open.spotify.com/track/1lmtbdnwqEkrtVQhDQvw1E", artist: "Booshle G", role: DEFAULT_ROLE },
+    { url: "https://open.spotify.com/track/1lmtbdnwqEkrtVQhDQvw1E", artist: "Booshle G", role: WRITE_PROD_ROLE },
     { url: "https://open.spotify.com/track/23kB40iILpGJ03qrMTGbyj", artist: "Ben Rodrigues", role: DEFAULT_ROLE },
     { url: "https://open.spotify.com/track/0HM8upO733cghrlIWcS7hK", artist: "Ben Rodrigues", role: DEFAULT_ROLE },
     { url: "https://open.spotify.com/track/46XLSMbxnqRAoFTk58lxth", artist: "David Derman", role: DEFAULT_ROLE },
