fixing full discography roles

--- a/discography.html
+++ b/discography.html
@@ -78,7 +78,7 @@
               Best Life
             </a>
           </td>
-          <td class="role">w / p / mx</td>
+          <td class="role">w / p</td>
           <td class="year">2024</td>
         </tr>
 
