--- a/discography.html
+++ b/discography.html
@@ -204,6 +204,17 @@
         </tr>
 
         <tr>
+          <td class="artist">Eva Marie</td>
+          <td class="song">
+            <a href="https://open.spotify.com/track/7l1DJJieyLyc9CNP4AA11H?si=53d112dc3a6648cf" target="_blank" rel="noreferrer">
+              Adrenaline
+            </a>
+          </td>
+          <td class="role">w / p / mx / m</td>
+          <td class="year">2025</td>
+        </tr>
+
+        <tr>
           <td class="artist">David Derman</td>
           <td class="song">
             <a href="https://open.spotify.com/track/24V2CHVDVrWvmDkYR8dlnO?si=be56bf5de5cc4b3a" target="_blank" rel="noreferrer">
