updated about me PAGE (added social icons/links), added tiktok and youtube links/icons TO INDEX PAGE

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
       <nav class="page-nav" aria-label="Site navigation">
         <a class="nav-link active" href="about.html">ABOUT</a>
         <a class="nav-link" href="discography.html">FULL DISCOGRAPHY</a>
+        <a class="nav-link" href="gallery.html">GALLERY</a>
         <a class="nav-link" href="contact.html">CONTACT</a>
       </nav>
     </div>
@@ -23,9 +24,58 @@
 
   <main class="container page-content">
     <h1 class="page-title">ABOUT</h1>
-    <p class="page-text">
-      (Add your bio here.)
-    </p>
+
+    <section class="about-grid">
+      <!-- Image -->
+      <div class="about-photo">
+        <img src="icons/about.jpg" alt="Image of Aidin Nortje" />
+      </div>
+
+      <!-- Text -->
+      <div class="about-body">
+        <p class="about-lead">
+          
+
+        </p>
+
+        <p class="about-lead">
+          I’m Aidin, a Cape Town–based songwriter, producer, mixing engineer, and mastering engineer, born in 2003.
+          Music has always been my language — whether I’m writing, recording, or shaping a record from demo to final master.
+        </p>
+
+        <p class="about-lead">
+          I work across the full creative process, combining strong songwriting with technical precision to deliver polished,
+          industry-ready music. My approach is artist-first: every decision serves the emotion, identity, and impact of the song.
+        </p>
+
+        <p class="about-lead">
+          From intimate vocals to fully produced records, I focus on creating music that connects, translates, and lasts.
+        </p>
+
+        <!-- Social icons -->
+        <div class="about-socials" aria-label="Social links">
+          <a class="social-icon" href="https://www.instagram.com/aidin.nortje" target="_blank" rel="noreferrer" aria-label="Instagram">
+            <img src="icons/binstgram.png" alt="Instagram" />
+          </a>
+
+          <a class="social-icon" href="https://www.tiktok.com/@aidinnortje?_r=1&_t=ZS-930NK9iNa8j" target="_blank" rel="noreferrer" aria-label="TikTok">
+            <img src="icons/btiktok.png" alt="TikTok" />
+          </a>
+
+          <a class="social-icon" href="https://www.youtube.com/@Aidin.Nortje" target="_blank" rel="noreferrer" aria-label="YouTube">
+            <img src="icons/byoutube.png" alt="YouTube" />
+          </a>
+
+          <a class="social-icon" href="https://open.spotify.com/playlist/4zotRa3n7FXN8Esov5mG9v?si=V38nEeNWR2GVM8ruhIu9Iw" target="_blank" rel="noreferrer" aria-label="Spotify">
+            <img src="icons/bspotify.png" alt="Spotify" />
+          </a>
+
+          <a class="social-icon" href="https://www.linkedin.com/in/aidin-nortje-2b5446305/" target="_blank" rel="noreferrer" aria-label="LinkedIn">
+            <img src="icons/blinkedin.png" alt="LinkedIn" />
+          </a>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
