--- a/discography.html
+++ b/discography.html
@@ -17,6 +17,7 @@
       <nav class="page-nav">
         <a class="nav-link" href="about.html">ABOUT</a>
         <a class="nav-link active" href="discography.html">FULL DISCOGRAPHY</a>
+        <a class="nav-link" href="gallery.html">GALLERY</a>
         <a class="nav-link" href="contact.html">CONTACT</a>
       </nav>
     </div>
