--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
       <nav class="page-nav" aria-label="Site navigation">
         <a class="nav-link" href="about.html">ABOUT</a>
         <a class="nav-link" href="discography.html">FULL DISCOGRAPHY</a>
+        <a class="nav-link" href="gallery.html">GALLERY</a>
         <a class="nav-link active" href="contact.html">CONTACT</a>
       </nav>
     </div>
@@ -25,6 +26,27 @@
     
     <p class="page-text">
       Email: <a href="mailto:aidin.mgmt@gmail.com">aidin.mgmt@gmail.com</a>
+      <!-- Social icons -->
+        <div class="about-socials" aria-label="Social links">
+          <a class="social-icon" href="https://www.instagram.com/aidin.nortje" target="_blank" rel="noreferrer" aria-label="Instagram">
+            <img src="icons/binstgram.png" alt="Instagram" />
+          </a>
+
+          <a class="social-icon" href="https://www.tiktok.com/@aidinnortje?_r=1&_t=ZS-930NK9iNa8j" target="_blank" rel="noreferrer" aria-label="TikTok">
+            <img src="icons/btiktok.png" alt="TikTok" />
+          </a>
+
+          <a class="social-icon" href="https://www.youtube.com/@Aidin.Nortje" target="_blank" rel="noreferrer" aria-label="YouTube">
+            <img src="icons/byoutube.png" alt="YouTube" />
+          </a>
+
+          <a class="social-icon" href="https://open.spotify.com/playlist/4zotRa3n7FXN8Esov5mG9v?si=V38nEeNWR2GVM8ruhIu9Iw" target="_blank" rel="noreferrer" aria-label="Spotify">
+            <img src="icons/bspotify.png" alt="Spotify" />
+          </a>
+
+          <a class="social-icon" href="https://www.linkedin.com/in/aidin-nortje-2b5446305/" target="_blank" rel="noreferrer" aria-label="LinkedIn">
+            <img src="icons/blinkedin.png" alt="LinkedIn" />
+          </a>
     </p>
   </main>
 </body>
