--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <nav class="name-nav" aria-label="Site navigation">
         <a class="nav-link" href="about.html">ABOUT</a>
         <a class="nav-link" href="discography.html">FULL DISCOGRAPHY</a>
+        <a class="nav-link" href="gallery.html">GALLERY</a>
         <a class="nav-link" href="contact.html">CONTACT</a>
       </nav>
 
@@ -26,12 +27,20 @@
       <div class="social-row" aria-label="Social links">
   <!-- Instagram -->
   <a class="icon" href="https://www.instagram.com/aidin.nortje?igsh=aHJrMjNjYTh1aDR3" target="_blank" rel="noreferrer" aria-label="Instagram">
-    <img src="icons/instagram.webp" alt="Instagram">
+    <img src="icons/winstagram.webp" alt="Instagram">
+  </a>
+
+  <a class="icon" href="https://www.tiktok.com/@aidinnortje?_r=1&_t=ZS-930NK9iNa8j" target="_blank" rel="noreferrer" aria-label="Spotify">
+    <img src="icons/wtiktok.webp" alt="TikTok">
+  </a>
+  
+  <a class="icon" href="https://www.youtube.com/@Aidin.Nortje" target="_blank" rel="noreferrer" aria-label="Spotify">
+    <img src="icons/wyoutube.webp" alt="YouTube">
   </a>
 
   <!-- Spotify -->
   <a class="icon" href="https://open.spotify.com/playlist/4zotRa3n7FXN8Esov5mG9v?si=V38nEeNWR2GVM8ruhIu9Iw" target="_blank" rel="noreferrer" aria-label="Spotify">
-    <img src="icons/spotify.webp" alt="Spotify">
+    <img src="icons/wspotify.webp" alt="Spotify">
   </a>
 </div>
 
