made gallery page and added relevant imges

--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,14 @@
     <h1 class="page-title">CONTACT</h1>
     
     <p class="page-text">
-      Email: <a href="mailto:aidin.mgmt@gmail.com">aidin.mgmt@gmail.com</a>
+      Feel free to reach out for collaborations, inquiries, or just to say hello!
+    </p>
       <!-- Social icons -->
         <div class="about-socials" aria-label="Social links">
+          <a class="social-icon" href="mailto:aidin.mgmt@gmail.com" target="_blank" rel="noreferrer" aria-label="Email">
+            <img src="icons/bemail.png" alt="Email" />
+          </a>
+
           <a class="social-icon" href="https://www.instagram.com/aidin.nortje" target="_blank" rel="noreferrer" aria-label="Instagram">
             <img src="icons/binstgram.png" alt="Instagram" />
           </a>
