--- a/gallery.html
+++ b/gallery.html
@@ -116,5 +116,28 @@
 
     </section>
   </main>
+
+  <script>
+  // Scroll reveal for gallery items (replays when you scroll back)
+  const galleryItems = document.querySelectorAll(".gallery-item");
+
+  const galleryObserver = new IntersectionObserver(
+    (entries) => {
+      entries.forEach((entry) => {
+        // Add when in view
+        if (entry.isIntersecting) {
+          entry.target.classList.add("is-visible");
+        } else {
+          // Remove when out of view so it can animate again
+          entry.target.classList.remove("is-visible");
+        }
+      });
+    },
+    { threshold: 0.15 }
+  );
+
+  galleryItems.forEach((item) => galleryObserver.observe(item));
+</script>
+
 </body>
 </html>
