added a loading indicator for all pages and relevant css and js to hide it when the page is fully loaded.

--- a/about.html
+++ b/about.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+  <!-- Page Loader -->
+<div id="page-loader" aria-hidden="true">
+  <div class="loader-spinner"></div>
+</div>
+
   <!-- Simple top bar for internal pages -->
   <header class="page-header">
     <div class="page-inner">
@@ -77,5 +82,12 @@
       </div>
     </section>
   </main>
+  <script>
+  window.addEventListener("load", () => {
+    const loader = document.getElementById("page-loader");
+    loader.classList.add("is-hidden");
+  });
+</script>
+
 </body>
 </html>
