--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+  <!-- Page Loader -->
+<div id="page-loader" aria-hidden="true">
+  <div class="loader-spinner"></div>
+</div>
+
   <header class="page-header">
     <div class="page-inner">
       <a class="page-brand" href="index.html">AIDIN NORTJE</a>
@@ -54,5 +59,12 @@
           </a>
     </p>
   </main>
+  <script>
+  window.addEventListener("load", () => {
+    const loader = document.getElementById("page-loader");
+    loader.classList.add("is-hidden");
+  });
+</script>
+
 </body>
 </html>
