--- a/discography.html
+++ b/discography.html
@@ -17,7 +17,9 @@
   <!-- Page header (reuse your existing header if you want) -->
   <header class="page-header">
     <div class="page-inner">
-      <a href="index.html" class="page-brand">AIDIN NORTJE</a>
+      <a class="page-brand split-brand" href="index.html" aria-label="Home">
+  <span class="split-brand__text" data-text="AIDIN NORTJE">AIDIN NORTJE</span>
+</a>
 
       <nav class="page-nav">
         <a class="nav-link" href="about.html">ABOUT</a>
