--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
 
   <header class="page-header">
     <div class="page-inner">
-      <a class="page-brand" href="index.html">AIDIN NORTJE</a>
+      <a class="page-brand split-brand" href="index.html" aria-label="Home">
+  <span class="split-brand__text" data-text="AIDIN NORTJE">AIDIN NORTJE</span>
+</a>
 
       <nav class="page-nav" aria-label="Site navigation">
         <a class="nav-link" href="about.html">ABOUT</a>
